--- a/index.html
+++ b/index.html
@@ -18,4 +18,7 @@
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
   </body>
+  <footer class="container">
+    <a href="https://www.tvmaze.com/" target="_blank" class="footer-copyright">Copyright © 2021 TVMaze.com</a>
+  </footer>
 </html>
